support root listings. Support protocol.  This still doesn't cache properly.
svn path=/dasCore/community/autoplot2011/trunk/; revision=11178